--- a/bookingform.html
+++ b/bookingform.html
@@ -20,6 +20,14 @@
       <label>Drop Address</label>
       <textarea name="drop"required></textarea>
       <label>Type of Goods</label>
+      <select name="goods" required>
+        <option value="" Select Vehicle Type</option>
+        <option value="Tempo">Tempo</option>
+        <option value="Mini Truck">Mini Truck</option>
+        <option value="Truck">Truck</option>
+        <option value="Two Wheeler">Two Wheeler</option>
+        <option value="Other">Other</option>
+      </select>
       <input type="text" name="goods"required/>
       <label>Shifting Date</label>
       <input type="date" name="date"required/>
