--- a/indexm.html
+++ b/indexm.html
@@ -1,48 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport"content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8"/>
+  <meta name="viewport"content="width=device-width, initial-scale=1.0" />
   <title>Move Ease - Hassle-Free Goods Shifting</title>
+  <link rel="icon"href="logo.png"/>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-50 text-gray-800">
+<body class="bg-gray-100 text-gray-900 font-sans">
   <nav class="bg-white shadow p-4 flex justify-between items-center">
-    <h1 class="text-2xl font-bold text-blue-600">Move Ease</h1>
-    <ul class="flex gap-6 text-gray-600">
-      <li><a href="#services"class="hover:text-blue-500">Services</a></li>
-      <li><a href="#why"class="hover:text-blue-500">Why Us</a></li>
-      <li><a href="#testimonials"class="hover:text-blue-500">Testimonials</a></li>
-      <li><a href="#contact"class="hover:text-blue-500">Contact</a></li>
+    <h1 class="text-2xl font-bold text-black">Move Ease</h1>
+    <ul class="flex gap-6 text-gray-700">
+      <li><a href="#services"class="hover:text-black font-medium">Services</a></li>
+      <li><a href="#why"class="hover:text-black font-medium">Why Us</a></li>
+      <li><a href="#testimonials"class="hover:text-black font-medium">Testimonials</a></li>
+      <li><a href="#contact" class="hover:text-black font-medium">Contact</a></li>
     </ul>
   </nav>
-  <section class="bg-blue-100 p-10 text-center">
+  <section class="bg-gray-200 p-10 text-center">
     <h2 class="text-4xl font-bold mb-4">Hassle-Free Goods Shifting</h2>
     <p class="text-lg mb-6">Smooth. Fast. Reliable. Moving your world with ease.</p>
-    <button class="bg-blue-600 text-white px-6 py-2 rounded-full hover:bg-blue-700">Book Now</button>
+    <a href="bookingform.html">
+      <button class="bg-black text-white px-6 py-2 rounded-full hover:bg-gray-800 transition">
+        Book Now
+      </button>
+    </a>
   </section>
-  <section id="services" class="p-10">
+  <section id="services"class="p-10">
     <h3 class="text-3xl font-semibold text-center mb-8">Our Services</h3>
     <div class="grid md:grid-cols-3 gap-6">
-      <div class="bg-white p-6 shadow rounded-xl">
+      <div class="bg-white p-6 shadow-md rounded-xl border border-gray-200">
         <h4 class="text-xl font-semibold mb-2">Local Shifting</h4>
         <p>Quick and safe moving services within your city.</p>
       </div>
-      <div class="bg-white p-6 shadow rounded-xl">
+      <div class="bg-white p-6 shadow-md rounded-xl border border-gray-200">
         <h4 class="text-xl font-semibold mb-2">Inter-City Relocation</h4>
         <p>We handle long-distance moves across the country.</p>
       </div>
-      <div class="bg-white p-6 shadow rounded-xl">
+      <div class="bg-white p-6 shadow-md rounded-xl border border-gray-200">
         <h4 class="text-xl font-semibold mb-2">Packing & Unpacking</h4>
         <p>Professional packing to ensure your belongings are secure.</p>
       </div>
     </div>
   </section>
-  <section id="why"class="bg-blue-50 p-10">
+  <section id="why" class="bg-gray-100 p-10">
     <h3 class="text-3xl font-semibold text-center mb-6">Why Choose Move Ease?</h3>
     <div class="grid md:grid-cols-2 gap-6">
       <div>
-        <ul class="list-disc list-inside space-y-2">
+        <ul class="list-disc list-inside space-y-2 text-gray-700">
           <li>Trusted professionals with verified backgrounds</li>
           <li>Affordable and transparent pricing</li>
           <li>24/7 Customer support</li>
@@ -50,13 +55,27 @@
         </ul>
       </div>
       <div>
-        <img src="logo.png" alt="Moving"class="rounded-xl shadow">
+        <img src="logo.png" alt="Moving"class="rounded-xl shadow-md"/>
       </div>
     </div>
   </section>
-  <footer id="contact"class="bg-gray-800 text-white p-6 text-center">
+  <section id="testimonials"class="p-10 text-center">
+    <h3 class="text-3xl font-semibold mb-6">What Our Customers Say</h3>
+    <div class="grid md:grid-cols-2 gap-8">
+      <div class="bg-white p-6 rounded-xl shadow-md border border-gray-200 text-left">
+        <p class="text-gray-700 italic">"Move Ease made my shifting so smooth and stress-free. Highly recommended!"</p>
+        <p class="mt-4 font-semibold text-gray-900">— Vamshi</p>
+      </div>
+      <div class="bg-white p-6 rounded-xl shadow-md border border-gray-200 text-left">
+        <p class="text-gray-700 italic">"Very professional team. On-time service and careful handling of goods."</p>
+        <p class="mt-4 font-semibold text-gray-900">—  Dikshith</p>
+      </div>
+    </div>
+  </section>
+  <footer id="contact" class="bg-black text-white p-6 text-center">
     <p>Contact us: +91-9886593580 | venu98865@gmail.com</p>
     <p class="mt-2">&copy; 2025 Move Ease. All rights reserved.</p>
   </footer>
 </body>
 </html>
+
