--- a/moveease.html
+++ b/moveease.html
@@ -1,37 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <mete name="viewport"content="width=device-width,initial-scale=1.0"/>
-  <tittle>Login/signup</tittle>
-  <link rel="stylesheet"href="style.css"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Move Ease - Login / Sign Up</title>
+  <!-- Tailwind CSS CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" type="image/png" href="logo.png" />
 </head>
-<body>
-  <div class="container"id="loginContainer"> 
-  <img src="logo.png"alt="move logo"class="logo"/> 
-  <h2 id="formTitle">Login</h2>
-    <input type="email"id="email"placeholder="Email" required/>
-    <input type="password"id="password"placeholder="Password"required/>
-    <button onclick="submitForm()">Submit</button>
-    <div class="toggle"onclick="toggleForm()">
-      Don't have an account? Sign up
+<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+  <div id="loginContainer" class="bg-white rounded-2xl shadow-lg p-8 w-full max-w-md">
+    <div class="flex flex-col items-center mb-6">
+      <img src="logo.png" alt="Move Ease Logo" class="h-16 w-16 mb-4" />
+      <h2 id="formTitle" class="text-2xl font-semibold text-gray-800">Login</h2>
+    </div>
+    <div class="space-y-4">
+      <input type="email" id="email" placeholder="Email" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500"/>
+      <input type="password" id="password" placeholder="Password" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500"/>
+      <button onclick="submitForm()" class="w-full bg-indigo-600 text-white py-2 rounded-lg hover:bg-indigo-700 transition">
+        <span id="buttonText">Submit</span>
+      </button>
+    </div>
+    <div class="mt-6 text-center text-sm text-gray-500 cursor-pointer" onclick="toggleForm()">
+      <span id="toggleText">Don't have an account? Sign up</span>
     </div>
   </div>
+
   <script>
-    let isLogin=true;
+    let isLogin = true;
     function toggleForm() {
-      isLogin=!isLogin;
-      document.getElementById("formTitle").innerText=isLogin?"Login":"Sign Up";
-      document.querySelector(".toggle").innerText=isLogin
+      isLogin = !isLogin;
+      document.getElementById("formTitle").innerText = isLogin ? "Login" : "Sign Up";
+      document.getElementById("toggleText").innerText = isLogin
         ? "Don't have an account? Sign up"
         : "Already have an account? Login";
-    }  
-    function submitForm(){
-      const email=document.getElementById("email").value;
-      const password=document.getElementById("password").value;
-      alert(`${isLogin ?"Logging in" :"Signing up"}\nEmail:${email}\nPassword:${password}`);
-      window.location.href="indexm.html";
-}
+      document.getElementById("buttonText").innerText = isLogin ? "Submit" : "Register";
+    }
+
+    function submitForm() {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+      const action = isLogin ? "Logging in" : "Signing up";
+      // Here you can add your AJAX call or form submission logic
+      alert(`${action}!\nEmail: ${email}\nPassword: ${password}`);
+      // Redirect after successful auth
+      window.location.href = "indexm.html";
+    }
   </script>
 </body>
 </html>
